--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Croissants in Paris (bakery)" />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Homepage</title>
+    <title>The perfect croissants in Paris - croissantsparis.com</title>
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
+    <h1>🥐 Croissants in Paris</h1>
     <p>
       A croissant is a buttery, flaky viennoiserie pastry inspired by the
       kipferl of Austria but uses French yeast-leavened laminated dough. They
       are named for their hitorical crescent shape.
     </p>
     <footer>
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html" title="homepage">Homepage</a>
+      <a href="/photo.html" title="photo">Photo</a>
+      <a href="/contact.html" title="contact">Contact</a>
     </footer>
   </body>
 </html>
