--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Contact us</title>
+    <meta name="description" content="Contact us about croissants in Paris" />
+    <title>Contact us -croissantsparis.com</title>
   </head>
   <body>
     <h1>Contact us</h1>
@@ -16,9 +17,9 @@
       for more info.
     </p>
     <footer>
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html" title="homepage">Homepage</a>
+      <a href="/photo.html" title="photo">Photo</a>
+      <a href="/contact.html" title="contact">Contact</a>
     </footer>
   </body>
 </html>
