--- a/photo.html
+++ b/photo.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Photo of croissant</title>
+    <meta
+      name="description"
+      content="A beatiful picture of the best croissants in Paris"
+    />
+    <title>The most delicious croissants picture -croissantsparis.com</title>
   </head>
   <body>
     <h1>🥐 A picture of croissants</h1>
-    <img src="/images/croissant.jpg" alt="" class="croissant-image" />
+    <img src="/images/croissant.jpg" alt="croissant" class="croissant-image" />
     <footer>
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html" title="homepage">Homepage</a>
+      <a href="/photo.html" title="photo">Photo</a>
+      <a href="/contact.html" title="contact">Contact</a>
     </footer>
   </body>
 </html>
